--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "http://localhost:4000",
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.1.2",
     "moment": "^2.22.2",
     "react": "^16.5.0",
     "react-bootstrap": "^0.32.4",
